[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Rajkumar Natarajan <rajkumar.natarajan@synacor.com>"]

[dependencies]
# mysql = "12.3.1"
mysql_common = "0.5.0"
diesel = { version = "1.0.0", features = ["mysql"] }
diesel_infer_schema = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"